--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "node-sass": "^7.0.1",
+    "node-sass-import": "^1.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
