--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "eslint": "^8.11.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-react-app": "^7.0.0",
+    "eslint-plugin-react": "^7.29.4",
     "vite": "^2.8.0"
   }
 }
