--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "node-sass": "^7.0.1",
     "node-sass-import": "^1.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
